--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     training.csv
 
-    <a href="training.csv">Training</a>
+    <a href="Training.csv">Training</a>
     
 </body>
 </html>
